tambah fitur hutang

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="Toko Racun"
+APP_NAME="KOBA-POS"
 APP_ENV=local
 APP_KEY=base64:Gc0SI9ZHlXOT4txmtkuSHhQku1bycnGyoA91cW1ZFGc=
 APP_DEBUG=true
