--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     },
     "dependencies": {
         "aos": "^2.3.4",
+        "apexcharts": "^3.36.3",
         "daisyui": "^2.36.1",
         "tailwind-scrollbar-hide": "^1.1.7",
         "vue-sweetalert2": "^5.0.5",
+        "vue3-apexcharts": "^1.4.1",
         "vuex": "^4.0.2"
     }
 }
